[package]
name = "portcullis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glow = "0.11.2"
sdl2 = { version = "0.35.2", features = ["bundled"] }
glam = "0.20.5"
image = "0.24.2"
glow_glyph = "0.5.0"
tokio = { version = "1", features = ["full"] }
reqwest = "0.11.10"
serde_json = "1.0.79"
keyframe = "1.0.4"
keyframe_derive = "1.0.0"
