[package]
name = "portcullis"
version = "0.1.0"
edition = "2021"

[dependencies]
glow = "0.11.2"  # "GL On Whatever"
sdl2 = { version = "0.35.2", features = ["bundled"] }  # Windowing library
glam = "0.20.5"  # Fast math library
image = "0.24.2"  # Load images from formatted byte buffers
glow_glyph = "0.5.0"  # Draw text using TTF fonts
tokio = { version = "1", features = ["full"] }  # Async runtime
reqwest = "0.11.10"  # Make HTTP requests
serde_json = "1.0.79"  # Load JSON
keyframe = "1.0.4"  # Interpolation library
keyframe_derive = "1.0.0"  # Ability to define custom tweenable types
